--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.53.0"
   }
 }
