--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,10 +1,13 @@
 {
+    "$schema": "./node_modules/wrangler/config-schema.json",
+    "main": ".open-next/worker.js",
     "name": "project-d",
-    "compatibility_date": "2025-12-06",
+    "compatibility_date": "2025-03-25",
+    "compatibility_flags": [
+        "nodejs_compat"
+    ],
     "assets": {
-        "directory": "./out"
-    },
-    "observability": {
-        "enabled": true
+        "directory": ".open-next/assets",
+        "binding": "ASSETS"
     }
 }
