--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "wrangler": "^4.53.0"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
